--- a/html/style.css
+++ b/html/style.css
@@ -1,14 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-color:indigo;
-    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #000000;
+    color: #f6f6f6;
 }
 h1{
-    color: white;
+    color: #f6f6f6;
     
 }
-strong{
-    color: aquamarine;
+.title{
+    color: #22D4FD;
 }
-a{
-    color: brown;
+.apresentacao{
+    display: flex;
+    gap: 50px;
+    margin: 10% 15%;
+    align-items: center;
+}
+.apresentacao__conteudo{
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    
+}
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+    font-family: "Krona One", sans-serif
+}
+.apresentacao__conteudo__texto{
+    font-size: 24px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+}
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+.apresentacao__links__link{
+    background-color: #22D4FD;
+    color: #000000; 
+    width: 280px;
+    border-radius: 16px;
+    text-align: center;
+    font-size: 24px;
+    padding: 21px 0;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
 }
