--- a/html/style.css
+++ b/html/style.css
@@ -5,10 +5,11 @@
     padding: 0;
 }
 body{
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    flex-direction: column; */
+    /* height: 100vh; */
     width: 100%;
     box-sizing: border-box;
     background-color: #000000;
@@ -18,13 +19,31 @@ h1{
     color: #f6f6f6;
     
 }
+.cabecalho{
+    padding: 1% 0 0 18%;
+}
+.cabecalho__menu {
+    display: flex;
+    justify-content:left;
+    align-items: center;
+}
+.cabecalho__menu__link{
+    font-size: 24px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    color: #22D4FD;
+    margin: 0 5px;
+    padding: 2% 0 0 5%;
+    text-decoration: none;
+}
 .title{
     color: #22D4FD;
 }
 .apresentacao{
     display: flex;
-    gap: 50px;
-    margin: 10% 15%;
+    justify-content: center;
+    gap: 220px;
+    margin: 9% 5%;
     align-items: center;
 }
 .apresentacao__conteudo{
@@ -44,18 +63,39 @@ h1{
     font-weight: 400;
 }
 .apresentacao__links{
+    align-items: center;
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
+    flex-direction: column;
+}
+.apresentacao__links__subtitulo{
+    font-family: "Krona One", sans-serif;
+    font-weight: 400;
 }
 .apresentacao__links__link{
-    background-color: #22D4FD;
-    color: #000000; 
-    width: 280px;
-    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    background-color:#000000 ;
+    color: #f6f6f6; 
+    border: 2px solid #22D4FD;
+    width: 378px;
+    border-radius: 8px;
     text-align: center;
     font-size: 24px;
     padding: 21px 0;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
+}
+.apresentacao__links__link:hover{
+background-color: #272727;
+}
+footer{
+    text-align:  center;
+    padding: 24px;
+    color: #000000;
+    background-color: #22D4FD;
+    font-family: "Montserrat", sans-serif;
+    font-size: 24px;
 }
